[gd_scene load_steps=14 format=2]

[ext_resource path="res://class/CharacterSprite.gd" type="Script" id=1]
[ext_resource path="res://resource/collision_rect.tres" type="Shape2D" id=2]
[ext_resource path="res://asset/Player_SIDE.png" type="Texture" id=3]
[ext_resource path="res://asset/Player_NORTH.png" type="Texture" id=4]
[ext_resource path="res://scene/Player.gd" type="Script" id=5]
[ext_resource path="res://asset/kenney_impact-sounds/Audio/footstep_concrete_004.ogg" type="AudioStream" id=6]
[ext_resource path="res://asset/Player_hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://scene/Alert.tscn" type="PackedScene" id=8]
[ext_resource path="res://asset/Player_SOUTH.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 15 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 31 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 31 )

[node name="Player" type="Area2D"]
script = ExtResource( 5 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 15, 15 )
shape = ExtResource( 2 )

[node name="CharacterSprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
script = ExtResource( 1 )
north_texture = ExtResource( 4 )
south_texture = ExtResource( 9 )
side_texture = ExtResource( 3 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RightCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 62, 15 )
shape = SubResource( 2 )

[node name="LeftCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( -32, 15 )
shape = SubResource( 1 )

[node name="TopCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 15, -32 )
shape = SubResource( 4 )

[node name="BottomCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 15, 62 )
shape = SubResource( 3 )

[node name="HurtSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Reject" parent="." instance=ExtResource( 8 )]

[node name="WalkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_shape_entered" from="." to="." method="_on_Player_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_Player_area_shape_exited"]
[connection signal="effect_finish" from="CharacterSprite" to="." method="_on_CharacterSprite_effect_finish"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
